--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -56,6 +56,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			flex: 1;
+			min-height: 0;
 			padding: 1rem;
 		}
 	}
